Fixing landing page, removing white spaces

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,67 +1,68 @@
-/* .App {
-  text-align: center;
-} */
+/* Importing the Roboto font from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-.App-logo {
-  height: 60vmin;
-  pointer-events: none;
-  /* padding-left:300px; */
-  /* size:200; */
-}
-
-.mars-container {
-  background-color: #FED0AC;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
-  padding: 20px;
+body, html {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-.image-section {
-  flex: 1;
+.mars-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 20px;
+  background-color: #FED0AC;
+}
+
+@media (min-width: 768px) {
+  .mars-container {
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 10px 40px;
+  }
+}
+
+.image-section {
+  text-align: right;
+  color: #707070;
+}
+
+.image-section img {
+  height: 60vmin;
+  pointer-events: none;
+  margin-bottom: 5px;
 }
 
 .text-section {
-  flex: 1;
+  text-align: center;
+  color: #707070;
   padding: 20px;
-  text-align: left;
-  color:#707070
 }
 
 .text-section h1 {
-  /* font-size: 3em; */
-  margin: 0;
-  /* padding: 10px;  */
-  
-  font-family: 'Roboto', sans-serif; /* Roboto font */
-  font-weight: bold;
-
-  color: white; /* White fill */
-  font-size: 52px; /* Large font size */
-  -webkit-text-stroke-width: 2px;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  font-size: calc(24px + 2vmin);
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #FE6A01;
-
 }
 
 .text-section p {
-  font-size: 1.5em;
-  margin: 10px 0 20px;
+  font-family: 'Roboto', sans-serif;
+  font-size: calc(14px + 1vmin);
+  margin: 10px 0;
 }
 
 .get-started-button {
   background-color: #FE6A01;
   color: white;
   border: none;
-  padding: 15px 30px;
-  font-size: 1em;
+  padding: 10px 20px;
+  font-family: 'Roboto', sans-serif;
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s;
